--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,4 +39,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/google_Btn" />
 
+    <Button
+        android:id="@+id/apitest_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="유기동물 API 서비스 연동 (TEST)"
+        android:backgroundTint="@android:color/transparent"
+        app:layout_constraintStart_toStartOf="@+id/kakao_Btn"
+        app:layout_constraintEnd_toEndOf="@+id/kakao_Btn"
+        app:layout_constraintTop_toBottomOf="@+id/kakao_Btn"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
